# barista

./: WORKSPACE  angular.json  nx.json  package-lock.json  package.json  tsconfig.base.json
.buildkite/: pipeline.yml
.deployment/barista/: Jenkinsfile
apps/figma-design-tokens/: BUILD.bazel  README.md  manifest.json  rollup.config.js  tsconfig.json
apps/figma-design-tokens/src/: code.ts  command-dispatcher.ts  environment.ts  styles.scss  ui.ts  worker.ts
apps/figma-design-tokens/src/command-handlers/: migrate.ts  publish.ts  set-theme.ts  sync.ts
apps/figma-design-tokens/src/command-handlers/dev/: clear-cache.ts  delete-color-tokens.ts
apps/figma-design-tokens/src/components/: loading-spinner.ts  metadata-upload-confirm.ts
apps/figma-design-tokens/src/shared/: conversion.ts  figma-util.ts  ipc.ts  storage.ts  types.d.ts
apps/fluid-dev/src/pages/button-group/: button-group-page.component.html  button-group-page.component.ts
libs/barista-components/autocomplete/src/: autocomplete-trigger.spec.ts
libs/barista-components/filter-field/src/: filter-field.spec.ts
libs/fluid-elements/button-group/: README.md  jest.config.js
libs/fluid-elements/button-group/src/lib/button-group/: button-group.spec.ts  button-group.ts
libs/fluid-elements/button-group/src/lib/button-group-item/: button-group-item.spec.ts  button-group-item.ts
libs/fluid-elements/checkbox/: BUILD.bazel
libs/fluid-elements/switch/src/lib/: switch.spec.ts
libs/fluid-elements/tab-group/src/lib/: tab-events.ts
libs/fluid-elements/tab-group/src/lib/tab/: tab.spec.ts  tab.ts
libs/fluid-elements/tab-group/src/lib/tab-group/: tab-group.spec.ts  tab-group.ts
libs/shared/design-tokens/: BUILD.bazel
libs/shared/fluid-utils/: BUILD.bazel
libs/shared/fluid-utils/src/: index.ts
libs/shared/fluid-utils/src/lib/: group-navigation.ts
libs/shared/node/: index.ts
tools/bazel_rules/figma_bundle/: create-figma-bundle.js
tools/bazel_rules/jest/: BUILD.bazel  jest-resolver.js  jest-runner.js  jest_macro.bzl
tools/bazel_rules/rollup/: rollup.bzl
tools/design-tokens/interfaces/: BUILD.bazel
