load("@npm//@bazel/typescript:index.bzl", "ts_library", "ts_config")
load("//tools/bazel_rules:index.bzl", "stylelint")

package(default_visibility = ["//:__subpackages__"])

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
    config = ":.stylelintrc",
    allow_empty_input = True,
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)

ts_library(
    name = "compile",
    srcs = glob(["src/**/*.ts"]),
    deps = [
        "@npm//axios",
        "@npm//lit-element",
    ],
    tsconfig = ":tsconfig"
)
