load("//libs/barista-components:config.bzl", "COMPONENT_TARGETS")
load("//tools/bazel_rules:index.bzl", "stylelint")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "design-tokens",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + glob([
        "**/*.html",
        "**/*.scss",
    ]) + ["//libs/testing/fixtures"] + COMPONENT_TARGETS,
)

filegroup(
    name = "design-tokens-entrypoints",
    srcs = glob(["src/lib/global/*.yml", "src/lib/patterns/*.yml"])
)

filegroup(
    name = "design-tokens-aliases-entrypoints",
    srcs = glob(["src/lib/aliases/*.yml"])
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)
